--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,12 +47,7 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Publish to npm (NPM token)
-        if: ${{ secrets.NPM_TOKEN != '' }}
+      - name: Publish to npm
         run: npm publish --access public --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Publish to npm (Trusted Publishing)
-        if: ${{ secrets.NPM_TOKEN == '' }}
-        run: npm publish --access public --provenance
