--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,4 +18,4 @@ jobs:
         uses: googleapis/release-please-action@v4
         with:
           release-type: node
-          package-name: '@nkootstra/things-mcp'
+          include-component-in-tag: false
