--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  id-token: write
 
 jobs:
   release-please:
@@ -15,7 +16,43 @@ jobs:
 
     steps:
       - name: Run Release Please
+        id: release
         uses: googleapis/release-please-action@v4
         with:
           release-type: node
           include-component-in-tag: false
+
+      - name: Checkout
+        if: steps.release.outputs.release_created
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        if: steps.release.outputs.release_created
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Setup Node
+        if: steps.release.outputs.release_created
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://registry.npmjs.org
+
+      - name: Install dependencies
+        if: steps.release.outputs.release_created
+        run: bun install --frozen-lockfile
+
+      - name: Run tests
+        if: steps.release.outputs.release_created
+        run: bun test
+
+      - name: Build
+        if: steps.release.outputs.release_created
+        run: bun run build
+
+      - name: Publish to npm
+        if: steps.release.outputs.release_created
+        run: npm publish --access public --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
