fix: add repository field to package.json

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "task-management",
     "macos"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nkootstra/things-mcp"
+  },
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
