fix: replace bun:sqlite with better-sqlite3 for Node.js compatibility
Claude Desktop can't find bunx when ~/.bun/bin isn't in its PATH,
breaking the MCP server for most users. Switch to better-sqlite3
(identical API) so the published package works with npx out of the box.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "darwin"
   ],
   "engines": {
-    "bun": ">=1.0"
+    "node": ">=22"
   },
   "scripts": {
     "build": "tsc",
@@ -39,9 +39,11 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "better-sqlite3": "^12.6.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "latest",
     "typescript": "^5"
   }
