fix: migrate from bun to node for Claude Desktop compatibility
The published package had a #!/usr/bin/env bun shebang, causing
Claude Desktop to fail with "env: bun: No such file or directory".
Also fixes broken better-sqlite3 named parameter bindings ($-prefixed
keys are bun:sqlite syntax, not better-sqlite3).

- Replace bun:test with vitest in all test files
- Replace bun:sqlite with better-sqlite3 in test files
- Fix db.ts named param keys ($name -> name) for better-sqlite3
- Update scripts to use npm/vitest/tsx instead of bun
- Remove bun.lock, add package-lock.json

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "bun --hot src/index.ts",
-    "test": "bun test",
-    "prepublishOnly": "bun run build"
+    "dev": "tsx watch src/index.ts",
+    "test": "vitest run",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "mcp",
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/bun": "latest",
-    "typescript": "^5"
+    "tsx": "^4",
+    "typescript": "^5",
+    "vitest": "^3"
   }
 }
