fix(ci): use --ignore-platform for npm ci on Linux runners
The package has "os": ["darwin"] since Things 3 is macOS-only,
but CI tests run on ubuntu with in-memory SQLite.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.release.outputs.release_created
-        run: npm ci
+        run: npm ci --ignore-platform
 
       - name: Run tests
         if: steps.release.outputs.release_created
