fix(ci): remove os restriction that blocks Linux CI runners
The "os": ["darwin"] field blocked npm ci on ubuntu runners.
macOS requirement is already documented in README and enforced
at runtime by the Things 3 database dependency.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.release.outputs.release_created
-        run: npm ci --ignore-platform
+        run: npm ci
 
       - name: Run tests
         if: steps.release.outputs.release_created
