--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
-    "better-sqlite3": "^12.6.2",
+    "sql.js": "^1.12.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
+    "@types/sql.js": "^1.4.9",
     "tsx": "^4",
     "typescript": "^5",
     "vitest": "^3"
